[package]
name = "prefix"
version = "1.0.3"
authors = ["Shivix"]
edition = "2021"
description = "A customizable pretty printer for FIX messages"
repository = "https://github.com/Shivix/prefix"
license = "GPL-3.0-only"
exclude = [
    ".gitignore",
    "LICENSE",
]
keywords = [
    "fix",
    "parser",
    "pretty",
    "print",
    "cli",
]
categories = [
    "command-line-utilities",
    "text-processing",
    "visualization",
    "development-tools",
]

[dependencies]
regex = "1.5.6"
clap = { version = "3.1.18", features = ["derive"] }

[build-dependencies]
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.1.4"
clap_mangen = "0.1.6"
