[package]
name = "prefix"
version = "1.2.1"
authors = ["Shivix"]
edition = "2021"
description = "A customizable pretty printer for FIX messages"
repository = "https://github.com/Shivix/prefix"
license = "GPL-3.0-only"
exclude = [
    ".gitignore",
    "LICENSE",
]
keywords = [
    "fix",
    "parser",
    "pretty",
    "print",
    "cli",
]
categories = [
    "command-line-utilities",
    "text-processing",
    "visualization",
    "development-tools",
]

[dependencies]
regex = "1.11.1"
clap = "4.5.41"
phf = { version = "0.12.1", features = ["macros"] }

[build-dependencies]
clap = "4.5.9"
clap_complete = "4.5.8"
clap_mangen = "0.2.22"
